--- a/pomodoro/package.json
+++ b/pomodoro/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
-    "bootstrap": "^4.6.1",
+    "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "mutationobserver-shim": "^0.3.7",
@@ -39,6 +39,7 @@
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
+    "svg-sprite-loader": "^6.0.11",
     "vue-cli-plugin-bootstrap-vue": "~0.8.2",
     "vue-template-compiler": "^2.6.11"
   }
